# practice_Geant_1_root

./: CMakeCache.txt  CMakeLists.txt  G4History.macro  Makefile  cmake_install.cmake  histogram.py  init_ter.mac  practice  practice.cc  vis.mac
include/: PracActionInitialization.hh  PracDetectorConstruction.hh  PracEventAction.hh  PracPrimaryGeneratorAction.hh  PracRunAction.hh  PracSteppingAction.hh
source/: PracActionInitialization.cc  PracDetectorConstruction.cc  PracEventAction.cc  PracPrimaryGeneratorAction.cc  PracRunAction.cc  PracSteppingAction.cc
